--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-calculator",
   "version": "0.1.0",
-  "homepage": "http://radha-soni.github.io/js-calculator",
+  "homepage": "https://radha-soni.github.io/js-calculator",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
